--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-vue-next": "^0.525.0",
     "nuxt": "^4.0.0",
     "pinia": "^3.0.3",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
