--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@ant-design-vue/nuxt": "^1.4.6",
     "@heroicons/vue": "^2.2.0",
     "@nuxt/content": "^3.6.3",
     "@nuxt/eslint": "^1.6.0",
@@ -19,15 +20,19 @@
     "@nuxt/test-utils": "^3.19.2",
     "@nuxt/ui": "^3.2.0",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/i18n": "^10.0.3",
     "@pinia/nuxt": "^0.11.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "@unhead/vue": "^2.0.12",
     "@vueuse/core": "^13.5.0",
     "@vueuse/nuxt": "^13.5.0",
+    "ant-design-vue": "^4.2.6",
     "axios": "^1.10.0",
     "eslint": "^9.31.0",
     "lucide-vue-next": "^0.525.0",
+    "maska": "^3.2.0",
     "nuxt": "^4.0.0",
     "pinia": "^3.0.3",
     "sweetalert2": "^11.22.2",
@@ -38,6 +43,7 @@
   },
   "devDependencies": {
     "@iconify-json/el": "^1.2.1",
+    "@nuxtjs/moment": "^1.6.1",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5"
   }
