--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vueuse/nuxt": "^13.5.0",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.10.0",
+    "better-sqlite3": "^12.2.0",
     "eslint": "^9.31.0",
     "lucide-vue-next": "^0.525.0",
     "maska": "^3.2.0",
